syntax = "proto3";

// option java_multiple_files = true;
option java_package = "hengda.billboard";
option java_outer_classname = "JobFairProto";

package jobFair;

service JobFair {

  rpc get(GetRequest) returns (Reply) {}

  rpc search(SearchRequest) returns (Reply) {}

  rpc update(UpdateRequest) returns (Reply) {}
  
}

message GetRequest {
  uint32 id = 1;
}

message SearchRequest {
  uint32 ent_id = 1;
  string ent_uuid = 2;
}

message UpdateRequest {
  uint32 job_fair_id = 1;
  uint32 ent_id = 2;
  string ent_uuid = 3;
  string recruitment_id = 4;
}

message Reply { string data = 1; }
